# data-agent-template

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  SKILL.md  pyproject.toml
.github/: copilot-instructions.md
docs/: architecture.md  evaluation-methodology.md  index.html  reasoning-protocol.md  spicedb-integration-plan.md
docs/zero-trust/: diagram.json  zero-trust.html
examples/mlb/: agent-config.yaml  system_prompt.md
examples/nndss/: agent-config.yaml  system_prompt.md
examples/retail/: CAPTURE_THE_FLAG.md  README.md  agent-config.yaml  system_prompt.md
examples/retail/deploy/: Containerfile.hermes-sandbox  demo-zero-trust.sh  deploy.sh  hermes-start.sh  (+4 more)
kagenti-operator-chart/: Chart.yaml  values.yaml
rac/decisions/: agent-lifecycle.md  data-platform-deploy.md  deploy-scaffold.md  dev-mode.md  domain-config.md  eval-pipeline.md  mcp-server.md  methodology-awareness.md  mlflow-integration.md  permission-enforcement.md  read-only-sql.md
rac/requirements/: agent-lifecycle.md  data-platform-deploy.md  deploy-scaffold.md  dev-mode.md  domain-config.md  eval-pipeline.md  mcp-server.md  methodology-awareness.md  mlflow-integration.md  permission-enforcement.md  read-only-sql.md
scaffold/: generate.py
src/data_agent_core/: __init__.py  cli.py
src/data_agent_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_config.py  test_deploy_render.py  test_duckdb_tool.py  test_metadata_tools.py  test_mock_permission.py  test_output.py  test_retail_config.py  test_retail_sample_data.py  test_sql_blocker.py
(+119 files in other folders)
